# active_inference

./: .coverage  .cursorignore  .cursorrules  .gitignore  AGENTS.md  COMPLETE_MAINTENANCE_SUMMARY.md  CONTINUING_MAINTENANCE_SUMMARY.md  CONTRIBUTING.md  CROSS_REFERENCE_AUDIT_COMPLETE.md  CROSS_REFERENCE_FINAL_SUMMARY.md  CodeStream_004.md  CodeStream_004_COMPREHENSIVE.md  DOCUMENTATION_AUDIT_REPORT.md  ENHANCEMENT_SUMMARY.md  FINAL_COMPLETION_REPORT.md  MAINTENANCE_COMPLETE_SUMMARY.md  Makefile  README.md  demo_llm.py  documentation_audit_report.json  documentation_audit_summary.md  interactive_exercises_report.json  knowledge_audit_report.json  metadata_completion_report.json  multimedia_integration_report.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
applications/: AGENTS.md  README.md
applications/best_practices/: AGENTS.md  README.md
applications/case_studies/: AGENTS.md  README.md
applications/domains/: AGENTS.md  README.md  __init__.py
applications/integrations/: AGENTS.md  README.md
applications/templates/: AGENTS.md  README.md
docs/: AGENTS.md  DOCUMENTATION_INDEX.md  INTERACTIVE_ELEMENTS.md  LLM_QUICK_START.md  QUICK_START.md  README.md  SYSTEMATIC_IMPLEMENTATION_SUMMARY.md  TROUBLESHOOTING.md  code_of_conduct.rst  conf.py  contributing.rst  index.rst
docs/_static/: AGENTS.md  README.md  custom.css
docs/_templates/: AGENTS.md  README.md
docs/api/: AGENTS.md  README.md  applications.rst  index.rst  knowledge.rst  platform.rst  research.rst  tools.rst  visualization.rst
docs/applications/: README.md  index.rst
docs/knowledge/: AGENTS.md  README.md  index.rst
docs/platform/: AGENTS.md  README.md  index.rst
docs/research/: AGENTS.md  README.md  index.rst
docs/visualization/: AGENTS.md  README.md  index.rst
knowledge/: AGENTS.md  README.md  faq.json  glossary.json  learning_paths.json  success_metrics.json
knowledge/applications/: AGENTS.md  README.md  decision_making.json  neuroscience_perception.json  robotics_control.json
knowledge/foundations/: AGENTS.md  README.md  active_inference_introduction.json  ai_generative_models.json  ai_policy_selection.json  bayesian_basics.json  bayesian_inference.json  bayesian_models.json  belief_updating.json  causal_inference.json  conjugate_priors.json  continuous_control.json  cross_entropy.json  decision_theory.json  empirical_bayes.json  fep_biological_systems.json  fep_introduction.json  fep_mathematical_formulation.json  graphical_models.json  hierarchical_models.json  info_theory_entropy.json  info_theory_kl_divergence.json  info_theory_mutual_information.json  information_bottleneck.json  kalman_filtering.json  multi_agent_systems.json  neural_dynamics.json  optimal_control.json  optimization_methods.json  perception.json  policy_gradient.json  posterior_inference.json
knowledge/implementations/: AGENTS.md  README.md  active_inference_basic.json  benchmarking.json  control_systems.json  deep_generative_models.json  expected_free_energy_calculation.json  mcmc_sampling.json  neural_network_implementation.json  neural_networks.json  planning_algorithms.json  reinforcement_learning.json  simulation_methods.json  uncertainty_quantification.json  validation.json  variational_inference.json
knowledge/mathematics/: AGENTS.md  README.md  advanced_probability.json  advanced_variational_methods.json  cutting_edge_active_inference.json  differential_geometry.json  dynamical_systems.json  expected_free_energy.json  fisher_information.json  information_geometry.json  markov_chain_monte_carlo.json  natural_gradient.json  optimal_transport.json  predictive_coding.json  quantum_cognition.json  stochastic_processes.json  variational_free_energy.json
knowledge/metadata/: AGENTS.md  README.md  repository.json
output/json_validation/: comprehensive_audit_report.json  comprehensive_audit_report.md  comprehensive_validation_summary.md  content_analysis_report.json  final_audit_summary.json  final_audit_summary.md  gap_analysis_report.json  validation_report.json
platform/: AGENTS.md  README.md  serve.py
platform/collaboration/: AGENTS.md  README.md
platform/deployment/: AGENTS.md  README.md
platform/knowledge_graph/: AGENTS.md  README.md
platform/search/: AGENTS.md  README.md
platform/templates/: AGENTS.md  README.md  base.html  error.html  index.html
research/: AGENTS.md  README.md
research/analysis/: AGENTS.md  README.md
research/benchmarks/: AGENTS.md  README.md
research/data_management/: AGENTS.md  README.md
research/experiments/: AGENTS.md  README.md
research/model_development/: AGENTS.md  README.md
research/project_planning/: AGENTS.md  README.md
research/reporting/: AGENTS.md  README.md
research/simulations/: AGENTS.md  README.md
research/tools/: AGENTS.md  README.md
research/visualization/: AGENTS.md  README.md
src/: AGENTS.md  README.md
src/active_inference/: AGENTS.md  README.md  __init__.py  cli.py
src/active_inference_knowledge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: AGENTS.md  README.md
tests/: AGENTS.md  README.md  __init__.py  coverage_config.py  run_tests.py
tests/fixtures/: AGENTS.md  README.md  __init__.py  test_data.py
tests/integration/: AGENTS.md  README.md  __init__.py  test_llm_integration.py
tests/knowledge/: AGENTS.md  README.md  test_content_accuracy.py  (+1 more)
tools/: AGENTS.md  AUDIT_TOOLS_README.md  CROSS_REFERENCE_FIX_SUMMARY.md  README.md  comprehensive_audit_report.py  content_analysis.py  content_completeness_report.py  content_enhancer.py  cross_reference_audit.py  cross_reference_fixer.py  documentation_audit.py  final_audit_summary.py  gap_analysis.py  gap_analysis_report.py  generate_missing_documentation.py  interactive_exercise_generator.py  json_validation.py  knowledge_base_maintenance_assessment.md  knowledge_validation.py  learning_path_generator.py  learning_path_optimizer.py  llm_cli.py  manual_cross_reference_fixes.py  metadata_completer.py  multimedia_integration_tool.py  success_metrics_validator.py  systematic_enhancement.py  test_validation.py
(+460 files in other folders)
